# playbook-pyinfra

./: .gitignore  README.md  autoimport.py  inventory.py  pyproject.toml  workstation.py
applications/: __init__.py  dbeaver.py  obsidian.py  spotify.py  vscode.py  wezterm.py
applications/browsers/: firefox.py
applications/desktop/: obsidian.py  spotify.py
applications/development/: dbeaver.py  vscode.py  wezterm.py
desktop/: __init__.py  betterlockscreen.py  i3lock_color.py  rofi.py  via_apt.py
environment/: __init__.py  brew.py  docker.py  dotfiles.py  essentials.py  hack_nerd_font.py  jetbrainsmono_nerd_font.py  nvim.py  via_apt.py  via_brew.py
fonts/: hack_nerd_font.py
shell/: __init__.py  awscli.py  delta.py  fzf.py  greenclip.py  mise.py  rofi.py  smug.py  starship.py  via_brew.py  zoxide.py  zsh.py
