[project]
name = "playbook-pyinfra"
version = "0.1.0"
description = "Pyinfra playbooks for workstation setup."
requires-python = ">=3.11"
dependencies = [
  "pyinfra>=3.0",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
